<resources>
    <string name="app_name">IRCTC - Where is my Train</string>
    <string name="Rs">₹</string>
    <string name="light">light</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="medium">medium</string>
    <string name="no_internet">No internet connection</string>
    <string name="popular_place">[{\"name\": \"All Stations\",\"code\": \"NDLS\",\"cityName\": \"Delhi,Delhi\"}, {\"name\": \"Kolkata Howrah Junction\", \"code\": \"HWH\", \"cityName\": \"Kilkata,West Bengal\" },{ \"name\": \"Kalyan Junction\", \"code\": \"KYN\", \"cityName\": \"Mumbai,Maharashtra\" },{ \"name\": \"Chennai Central Railway Station\", \"code\": \"MAS\", \"cityName\": \"Chennai,Tamil Nadu\" }, { \"name\": \"Chennai Central Railway Station\", \"code\": \"MAS\", \"cityName\": \"Chennai,Tamil Nadu\" }, { \"name\": \"Secunderabad Junction\", \"code\": \"SC\", \"cityName\": \"Hyderabad,Telangana\" }, { \"name\": \"Bangalore City Junction\", \"code\": \"SBC\", \"cityName\": \"Bangalore,Karnataka\" }, { \"name\": \"Pune Junction\", \"code\": \"PUNE\", \"cityName\": \"Pune,Maharashtra\" }, { \"name\": \"Ahmedabad Junction\", \"code\": \"ADI\", \"cityName\": \"Ahmedabad Junction\" }, { \"name\": \"Patna,Bihar\", \"code\": \"PNBE\", \"cityName\": \"Patna Junction\" }, { \"name\": \"Jaipur,Rajasthan\", \"code\": \"JP\", \"cityName\": \"Jaipur Railway Junction\" } ]</string>
    <string name="popular_station_place">[ { \"name\": \"New Delhi Railway Station\", \"code\": \"NDLS\", \"cityName\": \"Delhi,Delhi\" }, { \"name\": \"Pune Junction\", \"code\": \"PUNE\", \"cityName\": \"Pune,Maharashtra\" }, { \"name\": \"Kolkata Howrah Junction\", \"code\": \"HWH\", \"cityName\": \"Kolkata,West Bengal\" }, { \"name\": \"Jaipur Railway Junction\", \"code\": \"JP\", \"cityName\": \"Jaipur,Rajasthan\" }, { \"name\": \"Chennai Central Railway Station\", \"code\": \"MAS\", \"cityName\": \"Chennai, Tamil Nadu\" }, { \"name\": \"Bangalore City Junction\", \"code\": \"SBC\", \"cityName\": \"Bangalore, Karnataka\" }, { \"name\": \"Secunderabad Junction\", \"code\": \"SC\", \"cityName\": \"Hyderabad, Telangana\" }, { \"name\": \"Mumbai Lokmanya Tilak Terminus Railway Station\", \"code\": \"LTT\", \"cityName\": \"Mumbai, Maharashtra\" }, { \"name\": \"Ahmedabad Junction\", \"code\": \"ADI\", \"cityName\": \"Ahmedabad, Gujarat\" }, { \"name\": \"Varanasi, Uttar Pradesh\", \"code\": \"BSB\", \"cityName\": \"Varanasi Junction\" }, { \"name\": \"Jammu Tawi Railway Station\", \"code\": \"JAT\", \"cityName\": \"Jammu, Jammu and Kashmir\" }, { \"name\": \"Lucknow Railway Junction\", \"code\": \"LKO\", \"cityName\": \"Lucknow, Uttar Pradesh\" } ]</string>
    <string name="popular_train_schedule">{\"data\": { \"r\": [ { \"dn\": \"New Delhi Mumbai Central Rajdhani Express\", \"_id\": \"8090559992002104398\", \"xtr\": { \"tid\": \"12952\" }, \"n\": \"New Delhi Mumbai Central Rajdhani Express\" }, { \"dn\": \"Tamil Nadu Express\", \"_id\": \"8313480192978373941\", \"xtr\": { \"tid\": \"12621\" }, \"n\": \"Tamil Nadu Express\" }, { \"dn\": \"Telangana AP Express\", \"_id\": \"8387197722726551970\", \"xtr\": { \"tid\": \"12724\" }, \"n\": \"Telangana AP Express\" }, { \"dn\": \"New Delhi Sealdah Rajdhani Express\", \"_id\": \"7310498030271899556\", \"xtr\": { \"tid\": \"12314\" }, \"n\": \"New Delhi Sealdah Rajdhani Express\" }, { \"dn\": \"New Delhi Amritsar Express\", \"_id\": \"7310498030271899556\", \"xtr\": { \"tid\": \"12013\" }, \"n\": \"New Delhi Amritsar Express\" } ] }, \"t\": 9.274, \"success\": true }</string>
    <string name="regular">regular</string>
    <string name="thin">thin</string>
    <string name="went_wrong">Something went wrong !</string>
    <string name="find_trains">Find Trains</string>
    <string name="live_status">Live status</string>
    <string name="train_route_and_schedule">Train Route and Schedule</string>
    <string name="live_station">Live Station</string>
    <string name="pnr_status">PNR Status</string>
    <string name="setting">Setting</string>
    <string name="change_time_formate">Change Time Formate</string>
    <string name="twenty_four_hours">24 hours</string>
    <string name="privacy">Privacy</string>
    <string name="ok">Ok</string>
    <string name="select_train_starting_date">Select Train starting Date</string>
    <string name="day_before_yesterday">Day Before yesterday</string>
    <string name="date_example">Wednesday, 22 Mar 19</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="select_time_formate">Select Time Formate</string>
    <string name="twelve_hours">12 hours</string>
    <string name="station_change">Station Change</string>
    <string name="you_searched_for_trains_between_ndls_and_mas">You Searched for trains between NDLS and MAS</string>
    <string name="but_this_train_travel_between_nzm">But this train travel between NZM(H Nizamuddin) and MAS(chennai central)</string>
    <string name="ndls">NDLS</string>
    <string name="nzm">NZM</string>
    <string name="mas">MAS</string>
    <string name="back">Back</string>
    <string name="ok_go_ahead">Ok,Go Ahead</string>
    <string name="enter_destination_station">android:hint=\"@string/Enter DestinationStation\"</string>
    <string name="station_name_code">Station Name/Code</string>
    <string name="popular_search">Popular Search</string>
    <string name="name_code">Name/Code</string>
    <string name="search">Search</string>
    <string name="enter_city">Enter City</string>
    <string name="popular_list">Popular List</string>
    <string name="live_train_status">Live Train Status</string>
    <string name="last_update_example">Last Updated 15-03-2019 16:09:00</string>
    <string name="starting">Starting</string>
    <string name="tami">TAMIl NADU EXP</string>
    <string name="last_update">Last Update:</string>
    <string name="data_example">18 Mar 19 16:49:00</string>
    <string name="start_on">Start On</string>
    <string name="date_example_2">17 Mar 19</string>
    <string name="chennai_central">Chennai Central</string>
    <string name="new_delhi">New Delhi</string>
    <string name="zero_km">0 Km</string>
    <string name="many_km">2182 Km</string>
    <string name="next_statiom">Next Station</string>
    <string name="itarasi_junction">Itarasi Junction</string>
    <string name="platform_1">Plateform #1</string>
    <string name="dep_time">DEP. 18:45</string>
    <string name="sch_time">Sch-18:45</string>
    <string name="last_station">Last Station</string>
    <string name="pnr_number">PNR 80905789234</string>
    <string name="train">Train</string>
    <string name="number_express">22953 Express</string>
    <string name="journey_date">Journey Date</string>
    <string name="date_example_3">04 Apr\'19|10:28 am</string>
    <string name="current_status">Current Status</string>
    <string name="one_confirm">1 Confirm</string>
    <string name="chart_prepared">Chart Prepared</string>
    <string name="no">No</string>
    <string name="seat_status">Seat Status</string>
    <string name="one_passenger">1 Passenger</string>
    <string name="booking_status">Booking Status</string>
    <string name="confirmation">Confirmation</string>
    <string name="ncf_number">CNF/45/D1</string>
    <string name="conformition">Conformition</string>
    <string name="train_details">Train Details</string>
    <string name="time_example">10:28 Pm</string>
    <string name="boarding_from">Boarding from</string>
    <string name="surat">Surat</string>
    <string name="st_surat">ST Surat</string>
    <string name="date_example_4">04 Apr\'19</string>
    <string name="see_train_route">See Train Route</string>
    <string name="date_example_5">0h 55m</string>
    <string name="reservation_upto">Reservation upto</string>
    <string name="bharuch">Bharuch</string>
    <string name="bh_bharuch_junction">BH Bharuch Junction</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="check_pnr_status">Check PNR Status</string>
    <string name="pnr_number_all_caps">PNR NUMBER</string>
    <string name="tap_to_enter_your_pnr">Tap to enter your PNR</string>
    <string name="check">Check</string>
    <string name="train_booking">Train Booking</string>
    <string name="from">FROM</string>
    <string name="enter_city_name">Enter City name</string>
    <string name="to">To</string>
    <string name="date_all_caps">DATE</string>
    <string name="zero_six">06</string>
    <string name="march_2019">March 2019</string>
    <string name="wednesday">Wednesday</string>
    <string name="i_want_to_travel_by_ac">I want to travel by AC</string>
    <string name="done">Done</string>
    <string name="check_live_train_status">Check Live Train Status</string>
    <string name="train_name_number">Train Name/Number</string>
    <string name="name_number">Name/number</string>
    <string name="select_your_stop">Select your stop(optional)</string>
    <string name="select">Select</string>
    <string name="train_start_date">Train start Date(optional)</string>
    <string name="enter_train_name_number">Enter Train Name/Number</string>
    <string name="select_train_start_date">Select Train Start Date</string>
    <string name="pune_to_mumbai">Pune To Mumbai</string>
    <string name="date_example_6">08 Mar,Friday</string>
    <string name="travel_time">Travel Time</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="runs_on">Runs On</string>
    <string name="classes">Classes</string>
    <string name="total_duration">Total Duration</string>
    <string name="number_of_stop">Number of Stop</string>
    <string name="train_name_code">Train Name/Code</string>
    <string name="one_ac">1 AC</string>
    <string name="tap_to_update">Tap to update</string>
    <string name="date_example_7">08 Mar,Fri</string>
    <string name="gwlnw">GWLNW105/WL85</string>
    <string name="no_data_found">No Data Found</string>
    <string name="gnq">GNQ</string>
    <string name="thouzand_km">1030 km</string>
    <string name="godhani">Godhani</string>
    <string name="no_stoppage">No Stoppage</string>
    <string name="arr_with_time">ARR. 04:00</string>
    <string name="schd_with_time">schd. 04:00</string>
    <string name="dep_with_time">DEP. 04:10</string>
    <string name="sleeper">sleeper</string>
    <string name="day_one">Day 1</string>
    <string name="platform_with_stop">Plateform #4| Stop 4m</string>
    <string name="gujarat_express">gujarat express</string>
    <string name="expected_platform">Expected Platform #5</string>
    <string name="expt_with_time">Expt. 10:23</string>
    <string name="running_on_time">Running on Time</string>
    <string name="four_hungred_km">431 km</string>
    <string name="show_in_between_stations">Show in-between station</string>
    <string name="indrayani_exp">INDRAYANI EXP</string>
    <string name="delhi">Delhi</string>
    <string name="old_delhi_railway_station">old Delhi Railway Station</string>
    <string name="dli">DLI</string>
    <string name="edit">EDIT</string>
    <string name="ticket_info">62 yr,Full Berth,Male</string>
    <string name="window">Window</string>
    <string name="concession_applied">100% concession applied</string>
    <string name="please_carry_an_age_proof_in_the_train">please carry an age proof in the train</string>
</resources>