<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="22dp">

    <com.Example.IRCTCWhereismyTrain.widget.MyTextView
        android:id="@+id/tv_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/select_time_formate"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:txttype="@string/regular" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <com.Example.IRCTCWhereismyTrain.widget.MyTextView
            android:id="@+id/tv_12hr"
            android:layout_width="0.0dip"
            android:layout_height="36dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1.0"
            android:background="@drawable/bg_round_corner_blue"
            android:gravity="center"
            android:paddingLeft="0.0dip"
            android:text="@string/twelve_hours"
            android:textColor="@color/white" />

        <com.Example.IRCTCWhereismyTrain.widget.MyTextView
            android:id="@+id/tv_24hr"
            android:layout_width="0.0dip"
            android:layout_height="36dp"
            android:layout_below="@+id/tv_title"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="22dp"
            android:layout_weight="1.0"
            android:background="@drawable/bg_round_corner_blue"
            android:gravity="center"
            android:text="@string/twenty_four_hours"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>