<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/v_line1"
        android:layout_width="6dp"
        android:layout_height="144dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="-2.0dip"
        android:layout_marginBottom="-2.0dip"
        android:background="@color/dirty_white" />

    <LinearLayout
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.0dip"
        android:orientation="vertical">

        <com.Example.IRCTCWhereismyTrain.widget.MyTextView
            android:id="@+id/tv_code"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/v_line1"
            android:layout_marginRight="12dp"
            android:ellipsize="end"
            android:gravity="right"
            android:maxLines="1"
            android:text="@string/gnq"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:txttype="@string/medium" />

        <com.Example.IRCTCWhereismyTrain.widget.MyTextView
            android:id="@+id/tv_distnce"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_sub_code"
            android:layout_marginTop="6dp"
            android:layout_marginRight="12dp"
            android:ellipsize="end"
            android:gravity="right"
            android:maxLines="1"
            android:text="@string/thouzand_km"
            android:textSize="13sp"
            app:txttype="@string/regular" />
    </LinearLayout>

    <ImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginLeft="94dp"
        android:layout_marginTop="0.0dip"
        android:layout_marginRight="12dp"
        android:src="@drawable/ic_fill_dot"
        android:tint="#ff727272" />

    <ImageView
        android:id="@+id/iv_train"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/bg_circle_green"
        android:padding="6dp"
        android:src="@drawable/ic_train_status"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="0.0dip"
        android:orientation="vertical">

        <com.Example.IRCTCWhereismyTrain.widget.MyTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/v_line1"
            android:layout_toRightOf="@+id/iv_dot"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/godhani"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:txttype="@string/medium" />

        <com.Example.IRCTCWhereismyTrain.widget.MyTextView
            android:id="@+id/tv_plateform"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_sub_name"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@+id/iv_dot"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/platform_with_stop"
            android:textColor="@color/medium_dark_grey"
            android:textSize="13sp"
            app:txttype="@string/regular" />

        <LinearLayout
            android:id="@+id/ll_sub_arrival"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_stop"
            android:layout_marginBottom="12dp"
            android:layout_toRightOf="@+id/iv_dot"
            android:orientation="horizontal">

            <com.Example.IRCTCWhereismyTrain.widget.MyTextView
                android:id="@+id/tv_arr_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingRight="12dp"
                android:text="@string/arr_with_time"
                android:textColor="@color/soft_green"
                android:textSize="13sp"
                app:txttype="@string/medium" />

            <com.Example.IRCTCWhereismyTrain.widget.MyTextView
                android:id="@+id/tv_dep_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingRight="12dp"
                android:text="@string/dep_with_time"
                android:textColor="@color/soft_green"
                android:textSize="13sp"
                app:txttype="@string/medium" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>