<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="22dp"
    android:paddingBottom="12dp">

    <CheckBox
        android:id="@+id/ch_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true" />

    <com.Example.IRCTCWhereismyTrain.widget.MyTextView
        android:id="@+id/tv_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.0dip"
        android:layout_marginBottom="6dp"
        android:layout_toRightOf="@+id/ch_add"
        android:text="Fkjj jgh"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:txttype="@string/medium" />

    <com.Example.IRCTCWhereismyTrain.widget.MyTextView
        android:id="@+id/tv_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:text="@string/edit"
        android:textColor="@color/item_select"
        android:textSize="17sp"
        app:txttype="@string/medium" />

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_below="@+id/tv_name"
        android:layout_marginRight="6dp"
        android:layout_toRightOf="@+id/ch_add"
        android:padding="2.0dip"
        android:src="@drawable/ic_user" />

    <com.Example.IRCTCWhereismyTrain.widget.MyTextView
        android:id="@+id/tv_ticket_detail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name"
        android:layout_toRightOf="@+id/iv_user"
        android:paddingRight="12dp"
        android:text="@string/ticket_info"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:txttype="@string/regular" />

    <ImageView
        android:id="@+id/iv_window"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_below="@+id/tv_ticket_detail"
        android:layout_marginTop="6dp"
        android:layout_marginRight="6dp"
        android:layout_toRightOf="@+id/ch_add"
        android:padding="2.0dip"
        android:src="@drawable/ic_seat" />

    <com.Example.IRCTCWhereismyTrain.widget.MyTextView
        android:id="@+id/tv_seat_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_ticket_detail"
        android:layout_marginTop="6dp"
        android:layout_toRightOf="@+id/iv_user"
        android:paddingRight="12dp"
        android:text="@string/window"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:txttype="@string/regular" />

    <ImageView
        android:id="@+id/iv_coupon"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_below="@+id/tv_seat_type"
        android:layout_marginTop="6dp"
        android:layout_marginRight="6dp"
        android:layout_toRightOf="@+id/ch_add"
        android:padding="2.0dip"
        android:src="@drawable/ic_discount" />

    <com.Example.IRCTCWhereismyTrain.widget.MyTextView
        android:id="@+id/tv_conceson"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_seat_type"
        android:layout_marginTop="6dp"
        android:layout_toRightOf="@+id/iv_user"
        android:paddingRight="12dp"
        android:text="@string/concession_applied"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:txttype="@string/regular" />

    <com.Example.IRCTCWhereismyTrain.widget.MyTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_conceson"
        android:layout_marginTop="6dp"
        android:layout_marginRight="24dp"
        android:layout_toRightOf="@+id/ch_add"
        android:background="@color/lighter_green"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/please_carry_an_age_proof_in_the_train"
        android:textColor="@color/soft_green" />
</RelativeLayout>