<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_nearby_train"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minHeight="64dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp">

    <com.Example.IRCTCWhereismyTrain.widget.MyTextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/date_example_7"
        android:textColor="@color/medium_dark_grey"
        android:textSize="17sp"
        app:txttype="@string/regular" />

    <ImageView
        android:id="@+id/iv_arrow"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:rotation="280.0"
        android:src="@drawable/ic_down_drop"
        android:tint="#ffa5a5a5" />

    <com.Example.IRCTCWhereismyTrain.widget.MyTextView
        android:id="@+id/tv_avalib_tid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/iv_arrow"
        android:layout_toRightOf="@+id/tv_date"
        android:ellipsize="end"
        android:gravity="right"
        android:maxLines="1"
        android:paddingRight="6dp"
        android:text="@string/gwlnw"
        android:textColor="#fff09c22"
        android:textSize="17sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_alignParentBottom="true"
        android:background="@color/dirty_white" />
</RelativeLayout>